# python-project-lvl1

./: Makefile  README.md  pyproject.toml
brain_games/: body.py
brain_games/games/: calc.py  even.py  gsd.py  prime.py  progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gsd.py  brain_prime.py  brain_progression.py
