[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Anneta"]
packages = [
  { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
hexlet-code = "^0.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"